# CSE-185

./: README.md  countArray.txt  occurenceArray.txt  partialSuffixArray.txt  pyproject.toml  requirements.txt  sequence.txt  sequence_bwt.txt  sequence_bwt_compressed.txt  setup.py
Project/: README.md  requirements.txt  setup.py
Project/SBWA/: README  _init_.py  bwa.py  smallsequence.txt
Project/Tests/: 100000bp.fa  1000bp.fa  10k.fa  2000bp.fa  20k.fa  35k.fa  5000bp.fa  mini.fa  seqs.fastq
Project/sbwa/: countArray.txt  occurenceArray.txt  partialSuffixArray.txt  sbwa.py  sequence.txt  sequence_bwt.txt  sequence_bwt_compressed.txt
Project/sbwa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Project/src/SBWA/: bwa.py  bwaIndex.py  bwtApprxSearch.py  bwtReverse.py  bwtSearch.py  mini.fa  small.txt
Project/users/samag/Scripts/: sbwa-script.py
sbwa/: sbwa.py
sbwa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/sbwa/: countArray.txt  occurenceArray.txt  partialSuffixArray.txt  sbwa.py  sequence_bwt.txt  util.py
src/sbwa.egg-info/: PKG-INFO  SOURCES.txt
tests/: 15k.fa  25000bp.fa  500bp.fa  mini.fa  seqs.fastq
