[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbwa"
version = "0.0.1"
authors = [
  { name="Samuel Garcia Author", email="sag086@ucsd.edu" },
]
description = "Index database sequences in the FASTA format"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
],
package_dir={'':"src"},
packages=find_packages("src")

[project.urls]
"Homepage" = "https://github.com/Samgarci17/CSE-185"