[build-system]
requires = [
"setuptools>=61.0", 
"dnazip-bioinfo==0.2",
"fastq==2.0.2",
"miniFasta==3.0.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "sbwa"
version = "0.0.2"
authors = [
  { name="Samuel Garcia Author", email="sag086@ucsd.edu" },
]
description = "Index database sequences in the FASTA format"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Samgarci17/CSE-185"